<resources>
    <string name="app_name">Postly</string>

    <!--Login Strings-->
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="login_button_text">Log in</string>
    <string name="not_account_text">Don\'t have an account? Sign up</string>

    <!--Register Strings-->
    <string name="choose_img_text">Chose your profile picture:</string>
    <string name="full_name_hint">Full name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="profile_image">Profile Image</string>
    <string name="register_button_text">Register</string>
    <string name="account_text">Have an account already? Log in.</string>

    <!--Error Strings-->
    <string name="email_error_text">Please enter an email.</string>
    <string name="password_error_text">Please enter a password.</string>

    <!--NavBar Strings-->
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Open Navigation Drawer</string>
    <string name="profile_text">Profile</string>
    <string name="log_out_text">Log Out</string>
    <string name="settings_text">Settings</string>
    <string name="nav_bar_title">Chat App</string>

    <string name="profile_image_title_alert_dialog">Profile Picture</string>

    <!--PopUp Menu-->
    <string name="popup_menu_profile">Profile</string>
    <string name="popup_menu_settings">Settings</string>
    <string name="delete_account_text">Delete Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sheet_dialog_title">Enter your name</string>
    <string name="sheet_dialog_name">Name</string>
    <string name="btn_save_sheet_dialog">CONFIRM</string>
    <string name="btn_cancel_sheet_dialog">Cancel</string>
    <string name="friend_requests_item">Friend Requests</string>
    <string name="post_caption_hint">Write a caption…</string>
    <string name="upload_post">Post</string>
    <string name="profile_title_posts">My Posts</string>
    <string name="admin_statistics_text">Statistics</string>
    <string name="total_registered_users_text">Total registered users:</string>
    <string name="score_text">Score:</string>
    <string name="highest_score_text">Highest Score:</string>
    <string name="btn_start_game">Start</string>
    <string name="new_highscore_text">New Highscore!</string>
    <string name="btn_restart_text">Restart</string>
    <string name="btn_exit_text">Exit</string>
    <string name="home_text_bottom_menu">Home</string>
    <string name="feed_text_bottom_menu">Feed</string>
    <string name="upload_post_text_bottom_menu">Upload Post</string>
    <string name="play_text_bottom_menu">Play!</string>
    <string name="friends_text_bottom_menu">Friends</string>
    <string name="message_hint_text">Message</string>
    <string name="typing_chat_text">typing…</string>
    <string name="to_text">to:</string>
    <string name="image_text">📷Image</string>
    <string name="comments_text">Comments</string>
    <string name="posted_on_text">Posted on:</string>
    <string name="comment_text">Comment</string>
    <string name="see_all_comments_text">See all comments</string>
    <string name="be_the_first_comment_text">Be the first comment!</string>
    <string name="add_theme_text">Add Theme</string>
    <string name="themes_text">Themes</string>
    <string name="btn_apply_text">Apply</string>
    <string name="admin_text">Admin</string>
    <string name="btn_add_text">Add</string>
    <string name="btn_cancel_text">Cancel</string>
    <string name="price_text">Price</string>
    <string name="description_text">Description</string>
    <string name="theme_name_text">Theme name</string>
    <string name="add_a_custom_theme_text">Add a custom theme</string>
    <string name="my_themes_text">My themes</string>
    <string name="theme_shop_text">Theme shop</string>
    <string name="admin_panel_text">Admin Panel</string>
    <string name="friend_requests_text">Friend Requests</string>
    <string name="friends_text">Friends</string>
    <string name="send_message_text">send message</string>
    <string name="themes_statistics_text">Number of times the themes have been unlocked:</string>
    <string name="faq_text">F.A.Q</string>
    <string name="f_a_q_title">F.A.Q</string>
    <string name="how_do_i_add_friends_qs">How do I add friends?</string>
    <string name="manage_fr_req_Text">How can i manage incoming friend requests?</string>
    <string name="terms_and_conditions_text">Terms and Conditions</string>
    <string name="postly_text">Postly</string>
    <string name="you_haven_t_uploaded_any_post_text">You haven\'t uploaded any post</string>
    <string name="score_empty_state_text">Add a friend to see their high score!</string>
    <string name="empty_state_feed_text">No post in sight!</string>
    <string name="btn_ok">OK</string>
    <string name="error_dialog">The account doesn\'t exists.</string>
    <string name="error_text">Error</string>
    <string name="email_exists_dialog">The email is already on use.</string>
    <string name="field_error_dialog">Empty fields.</string>
    <string name="registered_users_per_day_text">Registered users per day:</string>
    <string name="start_a_chat_with_a_friend_text">Start a chat with a friend!</string>
    <string name="the_friends_you_add_will_appear_here_text">The friends you add will appear here</string>
    <string name="you_have_no_friend_requests_text">You have no friend requests</string>
    <string name="times_bought_text">Times bought:</string>
    <string name="jump_to_top_text">Jump to Top</string>


</resources>