<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_nav_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home_text_bottom_menu" />

    <item
        android:id="@+id/bottom_nav_feed"
        android:icon="@drawable/baseline_feed_24"
        android:title="@string/feed_text_bottom_menu" />

    <item
        android:id="@+id/bottom_nav_post"
        android:icon="@drawable/baseline_add_a_photo_24"
        android:title="@string/upload_post_text_bottom_menu" />

    <item
        android:id="@+id/bottom_nav_game"
        android:icon="@drawable/baseline_videogame_asset_24"
        android:title="@string/play_text_bottom_menu" />

    <item
        android:id="@+id/bottom_nav_friends"
        android:icon="@drawable/baseline_group_24"
        android:title="@string/friends_text_bottom_menu" />


</menu>