<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/profile_item"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/popup_menu_profile" />

    <item
        android:id="@+id/friend_request_item"
        android:icon="@drawable/baseline_group_add_24"
        android:title="@string/friend_requests_item" />

    <item
        android:id="@+id/admin_item"
        android:icon="@drawable/baseline_admin_24"
        android:title="@string/admin_text"
        android:visible="false" />

    <item
        android:id="@+id/settings_item"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/popup_menu_settings" />


</menu>