<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/container_margin"
    tools:context=".presentation.activity.SignUpActivity">

    <TextView
        android:id="@+id/choose_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_img_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_icon"
        android:layout_width="@dimen/icon_width"
        android:layout_height="@dimen/icon_height"
        android:layout_margin="@dimen/container_margin"
        android:clickable="true"
        android:contentDescription="@string/profile_image"
        android:focusable="true"
        android:src="@drawable/baseline_account_circle_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_img" />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="@dimen/sign_in_edit_text"
        android:layout_height="@dimen/component_height"
        android:layout_margin="@dimen/container_margin"
        android:hint="@string/full_name_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_icon"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/email"
        android:layout_width="@dimen/sign_in_edit_text"
        android:layout_height="@dimen/component_height"
        android:layout_margin="@dimen/container_margin"
        android:hint="@string/email_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_edit_text"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/sign_in_edit_text"
        android:layout_height="@dimen/component_height"
        android:layout_margin="@dimen/container_margin"
        android:hint="@string/password_hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_margin="@dimen/container_margin"
        android:text="@string/register_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <TextView
        android:id="@+id/already_registered_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/container_margin"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/account_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/terms_and_cond" />

    <TextView
        android:id="@+id/terms_and_cond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="By signing up, you agree to the Terms and Conditions."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_register" />


</androidx.constraintlayout.widget.ConstraintLayout>